# phasefieldx

./: .readthedocs.yaml  AUTHORS.rst  CITATION.cff  CITATION.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  LICENSE  README.rst  environment.yml  pyproject.toml  references.bib  requirements.txt
.github/workflows/: build_joss_paper.yml  docker-image.yml  publish_pip_distribution.yml  testing.yml
docs/: environment.yml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: generate_logo.py
docs/source/api/: index.rst
docs/source/extras/: index.rst
docs/source/getting-started/: index.rst
docs/source/theory/: index.rst
examples/AllenCahn/: README.rst  plot_4000.py
examples/Elasticity/: README.rst  plot_1100.py  plot_1101.py
examples/Fatigue/: README.rst  plot_1800.py
examples/Fatigue/1800_Fatigue_Single_Edge_Notched_Tension_Test/: bottom.reaction  bottom_natural.reaction  phasefieldx.conv  top.dof  top.reaction  top_natural.reaction  total.energy
examples/Fatigue/mesh/: mesh.msh
examples/GmshGeoFiles/: README.rst  plot_9101.py  plot_9102.py  plot_9103.py  plot_9104.py  plot_9105.py  plot_9106.py  plot_9107.py  plot_9108.py  plot_9109.py  plot_9110.py
examples/GmshGeoFiles/9101_SingleNotchedTensionTest/: file.geo  file.msh  mesh.inp  mesh.msh
examples/GmshGeoFiles/9102_SingleNotchedShearTest/: file.geo  mesh.inp  mesh.msh  mesh_file.msh
examples/GmshGeoFiles/9103_ThreePointBendingTest/: file.geo
examples/GmshGeoFiles/9104_Structured/: file.geo
examples/GmshGeoFiles/9106_ASTM_Standard_E_399_72/: file.geo
examples/GmshGeoFiles/9107_ChallengeTest/: file.geo
examples/GmshGeoFiles/9108_DoubleEdgeNotchTensionTest/: file.geo
examples/GmshGeoFiles/9109_TensileSpecimen/: file.geo
examples/PhaseField/: README.rst  plot_2000.py  plot_2001.py  plot_2003.py
examples/PhaseField/2003_example_mpi/: total.energy
examples/PhaseFieldFracture/: README.rst  plot_1700.py  plot_1702.py  plot_1711.py  plot_1712.py  plot_1713.py  plot_1714.py  plot_1715.py  plot_1718.py
examples/PhaseFieldFractureEnergyControlled/: README.rst  plot_1900.py  plot_central_cracked_non_var.py  plot_three_point_non_var.py  plot_three_point_var.py
joss/: paper.bib  paper.md
src/phasefieldx/: __init__.py  errors_functions.py  files.py  norms.py
test/: test_allen_cahn_element.py  test_file_utilities.py  test_gmsh_geo_file_processing.py  test_phase_field_element.py  test_version.py
test/Reactions/: test_reaction_forces.py
(+159 files in other folders)
