[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phasefieldx"
dynamic = ["version"]
description = "PhaseFieldX: An Open-Source Framework for Advanced Phase-Field Simulations"
authors = [{ name="Miguel Castillon", email="miguel.research@pm.me" }]
license = { file = "LICENSE" }
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

keywords = ["phase field", "phase-field", "fracture", "fatigue", "solidification", "allen cahn", "finite element"]

[tool.hatch.version]
path = "src/phasefieldx/__init__.py"

[project.urls]
Homepage = "https://github.com/CastillonMiguel/phasefieldx"
Documentation = "https://phasefieldx.readthedocs.io"
Issues = "https://github.com/CastillonMiguel/phasefieldx/issues"
